--- a/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
@@ -1,6 +1,8 @@
 <div class="dropdown h-100 mr-2">
-  <button class="btn btn-light h-100" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
-    <span class="text-muted font-weight-normal"><%= Spree.t(:show) %>:</span>
+  <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
+    <span class="text-muted font-weight-normal">
+      <%= Spree.t(:show) %>
+    </span>
     <% if product_filter_status_dropdown_value == Spree.t('admin.products.all_statuses') && product_filter_stock_dropdown_value == Spree.t('admin.products.any_stock') %>
       <%= Spree.t(:all_products) %>
     <% else %>
@@ -10,7 +12,6 @@
       <% end %>
       <%= product_filter_stock_dropdown_value if product_filter_stock_dropdown_value != Spree.t('admin.products.any_stock') %>
     <% end %>
-    <%= icon('chevron-down', class: 'arrow ml-1 mr-0') %>
   </button>
   <div class="dropdown-menu w-100" style="min-width: 200px">
     <h6 class="dropdown-header"><%= Spree.t('admin.products.by_status') %>:</h6>
