--- a/admin/app/views/spree/admin/payments/new.html.erb
+++ b/admin/app/views/spree/admin/payments/new.html.erb
@@ -13,7 +13,7 @@
           <div class="form-group mb-3">
             <%= f.label :amount, Spree.t(:amount) %>
             <div class="input-group">
-              <%= f.number_field :amount, value: @order.total_minus_store_credits - @order.payment_total, max: @order.total_minus_store_credits - @order.payment_total, class: 'form-control', required: true %>
+              <%= f.number_field :amount, value: @order.total_minus_store_credits - @order.payment_total, max: @order.total_minus_store_credits - @order.payment_total, step: ".01", class: 'form-control', required: true %>
               <div class="input-group-append">
                 <span class="input-group-text"><%= currency_symbol(@order.currency) %></span>
               </div>
