--- a/admin/app/views/spree/admin/products/_index_header.html.erb
+++ b/admin/app/views/spree/admin/products/_index_header.html.erb
@@ -3,5 +3,5 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= link_to_with_icon 'plus', Spree.t(:new_product), new_object_url, class: 'btn btn-primary ml-2' if can?(:create, Spree::Product) %>
+  <%= link_to_with_icon 'plus', Spree.t(:new_product), new_object_url, class: 'btn btn-primary' if can?(:create, Spree::Product) %>
 <% end %>
