--- a/admin/app/views/spree/admin/taxons/_form.html.erb
+++ b/admin/app/views/spree/admin/taxons/_form.html.erb
@@ -80,7 +80,7 @@
         <div class="card-body border-bottom">
           <div class="d-flex align-items-center">
             <%= f.label :sort_order, class: 'text-nowrap mr-2 mb-0' %>
-            <%= f.select :sort_order, taxon_sort_options_for_select, {}, { class: 'custom-select custom-select-sm w-auto',  data: { action: 'change->auto-submit#submitForm' } } %>
+            <%= f.select :sort_order, taxon_sort_options_for_select, {}, { class: 'custom-select custom-select-sm w-auto',  data: { action: 'change->auto-submit#submit' } } %>
           </div>
         </div>
 
