--- a/admin/app/views/spree/admin/users/index.html.erb
+++ b/admin/app/views/spree/admin/users/index.html.erb
@@ -82,8 +82,8 @@
                 <th><%= Spree.t(:name) %></th>
                 <th><%= Spree.t(:email_marketing) %></th>
                 <th><%= Spree.t(:location) %></th>
-                <th><%= Spree.t("admin.users.num_orders") %></th>
-                <th><%= Spree.t("admin.users.amount_spent") %></th>
+                <th><%= Spree.t('admin.num_orders') %></th>
+                <th><%= Spree.t('admin.amount_spent') %></th>
               </tr>
             </thead>
             <tbody>
