Fixed page builder layout to include `head` and `custom_head` partials

--- a/admin/app/views/layouts/spree/page_builder.html.erb
+++ b/admin/app/views/layouts/spree/page_builder.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
-    <%= javascript_importmap_tags 'application-spree-backend' %>
+    <%= render 'spree/admin/shared/head' %>
+    <%= render "spree/admin/shared/custom_head" %>
   </head>
 
   <body class="admin bg-light theme_editor page-builder"
