--- a/admin/app/views/spree/admin/dashboard/getting_started.html.erb
+++ b/admin/app/views/spree/admin/dashboard/getting_started.html.erb
@@ -8,7 +8,7 @@
     </p>
 
     <%= turbo_frame_tag :onboarding_tasks do %>
-      <% if current_vendor %>
+      <% if defined?(current_vendor) && current_vendor %>
         <%= render 'vendor_onboarding_progress', vendor: current_vendor %>
         <%= render 'vendor_onboarding_tasks', vendor: current_vendor %>
       <% else %>
