--- a/admin/app/views/spree/admin/dashboard/getting_started.html.erb
+++ b/admin/app/views/spree/admin/dashboard/getting_started.html.erb
@@ -1,10 +1,10 @@
 <div class="row pt-3">
   <div class="col-lg-8 mb-4">
     <h2 class="page-header-title">
-      <%= Spree.t('admin.getting_started.title') %>
+      <%= Spree.t('admin.getting_started') %>
     </h2>
-    <p class="">
-      <%= Spree.t('admin.getting_started.description') %>
+    <p>
+      <%= Spree.t('admin.dashboard.getting_started.description') %>
     </p>
 
     <%= turbo_frame_tag :onboarding_tasks do %>
