--- a/admin/app/assets/stylesheets/spree/admin/application.scss
+++ b/admin/app/assets/stylesheets/spree/admin/application.scss
@@ -1,1 +1,42 @@
+@import 'global/variables';
+@import 'global/mixins';
+
 @import 'bootstrap';
+
+@import 'components/navbar';
+@import 'components/tables';
+@import 'components/badges';
+@import 'components/tooltips';
+@import 'components/cards';
+@import 'components/alerts';
+@import 'components/dropdowns';
+@import 'components/main';
+@import 'components/buttons';
+@import 'components/filters';
+@import 'components/navigation';
+@import 'components/avatars';
+@import 'components/modals';
+@import 'components/offcanvas';
+@import 'components/variants_form';
+@import 'components/media_form';
+@import 'components/seo_form';
+@import 'components/line_items_form';
+
+@import 'plugins/tinymce_custom';
+@import 'plugins/trix_custom';
+@import 'plugins/tom-select.bootstrap4';
+@import 'plugins/flatfile';
+
+@import url('https://unpkg.com/trix@2.1.12/dist/trix.css');
+@import url('https://esm.sh/@uppy/core@4.2.0/dist/style.min.css');
+@import url('https://esm.sh/@uppy/dashboard@4.1.0/dist/style.min.css');
+@import url('https://esm.sh/@uppy/image-editor@3.1.0/dist/style.min.css');
+@import url('https://esm.sh/animate.css@4.1.1/animate.min.css');
+@import url('https://esm.sh/@simonwep/pickr@1.8.2/dist/themes/classic.min.css');
+
+@import 'shared/base';
+@import 'shared/forms';
+@import 'shared/sortable_tree';
+
+@import 'views/dashboard';
+@import "views/page_builder";
