--- a/admin/app/views/spree/admin/products/_empty_list.html.erb
+++ b/admin/app/views/spree/admin/products/_empty_list.html.erb
@@ -1,3 +1,1 @@
-<div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-  <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Product)) %>.
-</div>
+<%= render 'spree/admin/shared/no_resource_found' %>
