--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -32,7 +32,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <%= yield :page_actions_dropdown if content_for(:page_actions_dropdown) %>
             <% if record %>
-              <% if record.respond_to?(:audits) %>
+              <% if record.respond_to?(:audits) && spree.respond_to?(:admin_audits_path) %>
                 <a href="<%= spree.admin_audits_path(q: { auditable_id_eq: record.id, auditable_type_eq: record.class.to_s }) %>" target="_blank" class="dropdown-item">
                   <%= icon 'history' %>
                   <%= Spree.t(:audit_log) %>
