--- a/admin/app/views/spree/admin/variants/form/_inventory.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_inventory.html.erb
@@ -39,7 +39,7 @@
       </tbody>
     </table>
     <div class="card-footer text-center bg-gray-25 text-muted">
-      <%= Spree.t('admin.variants.stock_locations_link', link: spree.admin_stock_locations_path).html_safe %>
+      <%= Spree.t('admin.variants_form.stock_locations_link', link: spree.admin_stock_locations_path).html_safe %>
     </div>
   </div>
 </div>
