--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -18,7 +18,7 @@
           </th>
           <th>
             <%= Spree.t(:compare_at_amount) %>
-            <%= help_bubble(Spree.t(:compare_at_price_description)) %>
+            <%= help_bubble(Spree.t('admin.variants_form.compare_at_price_description')) %>
           </th>
         </tr>
       </thead>
