--- a/admin/app/views/spree/admin/shared/_analytics_loader_skeleton.html.erb
+++ b/admin/app/views/spree/admin/shared/_analytics_loader_skeleton.html.erb
@@ -1,8 +1,8 @@
   <div class="card mb-4">
-    <div class="card-header d-block border-0 h-auto">
+    <div class="card-header d-block border-0 h-auto p-2">
       <div class="row">
         <div class="col-6 col-lg-4 pr-1">
-          <div class="rounded cursor-pointer p-2 hover-light h-100 active">
+          <div class="rounded cursor-pointer p-2 hover-light h-100 active" style="min-height: 82px;">
             <div class="d-flex justify-content-center flex-column mb-3 mb-lg-0">
               <span class="font-size-sm text-muted">Total Sales</span>
               <span class="font-size-lg text-dark font-weight-bold mt-1">
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-  <div class="card-body">
+  <div class="card-body p-2">
     <div class="tab-content d-flex align-items-center justify-content-center" id="pills-tabContent" style="height: 300px">
       <div class="spinner-border text-muted align-middle opacity-50" role="status">
         <span class="sr-only"><%= Spree.t(:loading) %>...</span>
