--- a/admin/app/views/spree/admin/shared/_sidebar.html.erb
+++ b/admin/app/views/spree/admin/shared/_sidebar.html.erb
@@ -18,7 +18,7 @@
     <% end %>
   </div>
 
-  <div class="position-sticky d-none d-lg-block w-100 z-index-1000 border-top border-gray-800 mt-auto py-2 bottom-0">
+  <div class="position-sticky d-none d-lg-block w-100 z-index-1000 mt-auto py-2 bottom-0">
     <%= render 'spree/admin/shared/user_dropdown' %>
   </div>
 </div>
