--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -83,7 +83,7 @@
 
         <div class="form-group">
           <%= f.label :default_country_iso, Spree.t('i18n.country') %>
-          <%= f.country_select :default_country_iso, {}, { data: { controller: 'autocomplete-select' } } %>
+          <%= f.collection_select :default_country_iso, Spree::Country.pluck(:iso, :name), :first, :last, {}, { data: { controller: 'autocomplete-select' } } %>
           <%= f.error_message_on :default_country_iso %>
         </div>
         <div class="form-group">
