--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -109,7 +109,7 @@ $transition-fade:             opacity .15s linear !default;
 $transition-collapse:         height .15s ease !default;
 $transition-collapse-width:   width .15s ease !default;
 
-$badge-font-size:                   $font-size-sm !default;
+$badge-font-size:                   0.70rem !default;
 $badge-font-weight:                 500 !default;
 $badge-padding-y:                   .35em !default;
 $badge-padding-x:                   .5em !default;
