--- a/admin/app/views/spree/admin/shipping_methods/index.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/index.html.erb
@@ -2,16 +2,7 @@
   <%= Spree.t(:shipping) %>
 <% end %>
 
-<% content_for :page_actions do %>
-  <% if can?(:create, Spree::ShippingMethod) %>
-    <%= button_link_to Spree.t(:new_shipping_method), new_object_url,  class: "btn-primary", icon: 'plus' %>
-  <% end %>
-
-  <% if current_vendor.present? && !current_vendor.shipping_rates_confirmed? && @shipping_methods.any? %>
-    <%= button_link_to 'Confirm Shipping Rates', spree.confirm_shipping_rates_admin_vendor_path(current_vendor), class: 'btn-primary ml-2', icon: 'check.svg', data: { turbo_method: :patch, turbo_confirm: Spree.t(:are_you_sure) } %>
-  <% end %>
-<% end %>
-
+<%= render partial: 'spree/admin/shipping_methods/actions' %>
 <%= render partial: 'spree/admin/shared/shipping_nav' %>
 
 <% content_for :page_alerts do %>
@@ -39,5 +30,5 @@
     </table>
   </div>
 <% else %>
-  <<%= render 'spree/admin/shared/no_resource_found' %>
+  <%= render 'spree/admin/shared/no_resource_found' %>
 <% end %>
