--- a/admin/app/views/spree/admin/dashboard/_top_products.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_top_products.html.erb
@@ -41,7 +41,7 @@
                   <%= product.name %>
                 <% end %>
               </td>
-              <% unless @vendor %>
+              <% if enterprise_edition? && defined?(vendor_logo_link) && !@vendor %>
                 <td>
                   <%= vendor_logo_link(product.vendor) if product.vendor.present? %>
                 </td>
