--- a/admin/app/views/spree/admin/shared/_footer.html.erb
+++ b/admin/app/views/spree/admin/shared/_footer.html.erb
@@ -1,14 +1,2 @@
-<div
-  class="
-    mt-auto font-size-sm text-muted pt-0 pb-3 pt-lg-5 d-none d-lg-flex
-    align-items-center justify-content-end w-100
-  "
->
-  <div class="bg-light rounded-lg p-2 ml-3">
-    <%= Spree.t(:powered_by) %>
-    <%= link_to 'https://www.spreecommerce.org', target: '_blank', class: 'text-dark' do %>
-      Spree
-      <%= Spree.version %>
-    <% end %>
-  </div>
-</div>
+<footer class="text-muted py-3 text-center">
+</footer>
