--- a/admin/app/views/spree/admin/shared/_no_resource_found.html.erb
+++ b/admin/app/views/spree/admin/shared/_no_resource_found.html.erb
@@ -1,4 +1,4 @@
-<% resource_name = model_class.name.underscore.humanize %>
+<% resource_name ||= model_class.name.demodulize.underscore.humanize %>
 
 <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
   <%= Spree.t(:no_resource_found, resource: resource_name) %>
