--- a/admin/app/views/spree/admin/dashboard/_setup_progress.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_setup_progress.html.erb
@@ -2,7 +2,11 @@
   <div class="card-body">
     <div class="mb-3">
       Your overall setup progress
-      <span class="float-right text-muted">
+      <span class="float-right badge badge-<%= current_store.setup_completed? ? 'success' : 'light' %>">
+        <% if current_store.setup_completed? %>
+          <%= icon('check', class: 'text-success') %>
+        <% end %>
+
         <%= current_store.setup_tasks_done %> of <%= current_store.setup_tasks_total %> steps done
       </span>
     </div>
