--- a/admin/app/views/spree/admin/orders/_payments.html.erb
+++ b/admin/app/views/spree/admin/orders/_payments.html.erb
@@ -54,15 +54,18 @@
     <div class="card-body">
       <div class="d-flex mb-3 w-100 gap-3">
         <%= link_to_with_icon 'plus', Spree.t(:new_payment), spree.new_admin_order_payment_path(@order), class: 'btn btn-primary' %>
-        <%= link_to_with_icon 'send', Spree.t(:send_payment_link), spree.admin_order_payment_links_path(@order), data: { turbo_method: :post }, class: 'btn btn-light with-tip', title: Spree.t(:send_payment_link_title) %>
 
-        <div data-controller="clipboard">
-          <input type="hidden" value="<%= spree.checkout_state_url(@order.token, :payment, host: current_store.url_or_custom_domain) %>" readonly data-clipboard-target="source">
-          <button class="btn btn-light" type="button" data-action="click->clipboard#copy">
-            <%= icon('copy') %>
-            <%= Spree.t(:copy_payment_link) %>
-          </button>
-        </div>
+        <% if spree.respond_to?(:checkout_state_url) %>
+          <%= link_to_with_icon 'send', Spree.t('admin.send_payment_link'), spree.admin_order_payment_links_path(@order), data: { turbo_method: :post }, class: 'btn btn-light with-tip', title: Spree.t(:send_payment_link_title) %>
+
+          <div data-controller="clipboard">
+            <input type="hidden" value="<%= spree.checkout_state_url(@order.token, :payment, host: current_store.url_or_custom_domain) %>" readonly data-clipboard-target="source">
+            <button class="btn btn-light" type="button" data-action="click->clipboard#copy">
+              <%= icon('copy') %>
+              <%= Spree.t('admin.copy_payment_link') %>
+            </button>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
