--- a/admin/app/views/spree/admin/posts/_post.html.erb
+++ b/admin/app/views/spree/admin/posts/_post.html.erb
@@ -1,8 +1,8 @@
 <tr data-controller="row-link" id="<%= dom_id(post) %>">
   <td>
-    <%= link_to spree.edit_admin_post_path(post), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark', data: { row_link_target: :link, 'turbo-frame': '_top' } do %>
+    <%= link_to spree.edit_admin_post_path(post), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark gap-3', data: { row_link_target: :link, 'turbo-frame': '_top' } do %>
       <% if post.image.attached? && post.image.variable? %>
-        <div class="admin-product-image-container mr-3">
+        <div class="admin-product-image-container">
           <%= image_tag(
                 main_app.cdn_image_url(
                   post.image.variant(
