--- a/admin/app/views/spree/admin/products/form/_inventory.html.erb
+++ b/admin/app/views/spree/admin/products/form/_inventory.html.erb
@@ -3,7 +3,7 @@
     <h5 class="card-title"><%= Spree.t(:inventory) %></h5>
 
     <% if can?(:manage, Spree::StockLocation) %>
-      <%= link_to_with_icon 'adjustments', Spree.t(:manage_stock_locations), spree.admin_stock_locations_path, class: 'btn btn-sm btn-light' %>
+      <%= link_to_with_icon 'adjustments', Spree.t('admin.manage_stock_locations'), spree.admin_stock_locations_path, class: 'btn btn-sm btn-light' %>
     <% end %>
   </div>
   <div class="card-body">
