--- a/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
@@ -20,7 +20,7 @@
     <% end %>
     <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'dropdown-item' do %>
       <%= icon 'tools' %>
-      <%= Spree.t(:edit_theme) %>
+      <%= Spree.t('admin.edit_theme') %>
     <% end if current_store.default_theme %>
 
     <div class="dropdown-divider"></div>
