--- a/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
@@ -56,9 +56,18 @@
     <li class="nav-item">
       <%= active_link_to_with_icon('map-pin', Spree.t(:stock_locations), spree.admin_stock_locations_path, class: 'nav-link')  %>
     </li>
-    <% if spree.respond_to?(:admin_audits_path) %>
+    <% if enterprise_edition? %>
       <li class="nav-item">
-        <%= active_link_to_with_icon('history', Spree.t(:audit_trail), spree.admin_audits_path, class: 'nav-link w-auto', active: %w[audits exports imports].include?(controller_name)) %>
+        <%= active_link_to_with_icon('history', Spree.t('admin.audit_log'), spree.admin_audits_path, class: 'nav-link w-auto', active: %w[audits exports imports].include?(controller_name)) %>
+      </li>
+    <% else %>
+      <li class="nav-item">
+        <%= external_link_to nil, 'https://spreecommerce.org/pricing', class: 'nav-link d-flex align-items-center w-100' do %>
+          <%= icon 'history' %>
+          <%= Spree.t('admin.audit_log') %>
+
+          <span class="badge badge-dark ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
+        <% end %>
       </li>
     <% end %>
     <li class="nav-item">
@@ -85,7 +94,18 @@
 
     <%= render 'spree/admin/shared/sidebar/orders_nav' %>
     <%= render 'spree/admin/shared/sidebar/products_nav' %>
-    <%= render 'spree/admin/shared/sidebar/vendors_nav' if defined?(Vendo) %>
+    <% if enterprise_edition? %>
+      <%= render 'spree/admin/shared/sidebar/vendors_nav' %>
+    <% else%>
+      <li class="nav-item">
+        <%= external_link_to nil, 'https://spreecommerce.org/pricing', class: 'nav-link d-flex align-items-center w-100' do %>
+          <%= icon 'heart-handshake' %>
+          <%= Spree.t(:vendors) %>
+
+          <span class="badge badge-dark ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
+        <% end %>
+      </li>
+    <% end %>
 
     <% if can?(:manage, Spree.user_class) %>
       <li class="nav-item">
@@ -97,7 +117,7 @@
     <% end %>
 
     <% if can?(:manage, Spree::Promotion) %>
-      <% discounts_active = %w[promotions gift_cards gift_card_batches].include?(controller_name) %>
+      <% discounts_active = %w[promotions gift_cards gift_card_batches coupon_codes].include?(controller_name) %>
       <li class="nav-item">
         <%= active_link_to spree.admin_promotions_path, class: 'nav-link', active: discounts_active do %>
           <%= icon 'discount' %>
@@ -134,7 +154,17 @@
         <%= active_link_to_with_icon('send', Spree.t(:emails), spree.admin_emails_path, class: 'nav-link') %>
       </li>
     <% end %>
-    <%= render 'spree/admin/shared/sidebar/integrations_nav' if defined?(Spree::Integration) %>
+    <% if defined?(Spree::Integration) %>
+      <%= render 'spree/admin/shared/sidebar/integrations_nav' %>
+    <% else %>
+      <li class="nav-item">
+        <span class="nav-link d-flex align-items-center pr-1 cursor-default with-tip" title="Connect your store to third-party services to automate your business processes.">
+          <%= icon 'plug' %>
+          <span><%= Spree.t(:integrations) %></span>
+          <span class="badge badge-dark ml-auto rounded-pill">Coming soon!</span>
+        </span>
+      </li>
+    <% end %>
   </ul>
 
   <ul class="nav nav-dark flex-column mt-auto mb-3" id="settings-nav" data-turbo-permanent>
@@ -156,7 +186,7 @@
     <% if can?(:manage, current_store) && !enterprise_edition? %>
       <div class="nav nav-dark flex-column mt-2" id="plan-nav" data-turbo-permanent>
         <div class="bg-transparent border-top border-dark pt-2 pl-1 d-flex align-items-center justify-content-between">
-          <span class="font-weight-light font-size-sm text-white">Community Edition</span>
+          <span class="font-weight-light font-size-sm text-white with-tip" title="Spree v<%= Spree.version %>">Community Edition</span>
           <%= link_to_with_icon 'bolt', 'Upgrade', 'https://spreecommerce.org/pricing/', class: 'btn btn-sm btn-dark with-tip', target: '_blank', title: 'Upgrade to Enterprise Edition to access more features, such as multi-store management, B2B, multi-vendor marketplace, and more.' %>
         </div>
       </div>
