--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -5,7 +5,7 @@
     </h5>
 
     <% if can?(:manage, Spree::Store) %>
-      <%= link_to_with_icon 'adjustments', Spree.t(:manage_currencies), spree.edit_admin_store_path, class: 'btn btn-sm btn-light' %>
+      <%= link_to_with_icon 'adjustments', Spree.t('admin.manage_currencies'), spree.edit_admin_store_path, class: 'btn btn-sm btn-light' %>
     <% end %>
   </div>
   <div class="card-body p-0">
