--- a/admin/app/views/spree/admin/products/_form.html.erb
+++ b/admin/app/views/spree/admin/products/_form.html.erb
@@ -14,6 +14,7 @@
     <%= render 'spree/admin/products/form/status', f: f %>
     <%= render 'spree/admin/products/form/categorization', f: f %>
     <%= render 'spree/admin/products/form/stores', f: f if Spree::Store.accessible_by(current_ability).count > 1 %>
+    <%= render 'spree/admin/products/form/custom_sidebar_forms', f: f %>
 
     <%= render 'spree/admin/shared/seo',
           f: f,
