--- a/admin/app/views/spree/admin/products/_list.html.erb
+++ b/admin/app/views/spree/admin/products/_list.html.erb
@@ -81,24 +81,7 @@
           <table class="table" id="listing_products">
             <thead class="text-muted">
               <tr>
-                <th scope="col" class="pr-0 w-5">
-                  <div class="custom-control custom-checkbox ml-1">
-                    <input type="checkbox" class="custom-control-input" id="checkAllMasterCheckbox" data-bulk-operation-target="checkboxAll">
-                    <label class="custom-control-label" for="checkAllMasterCheckbox"><span></span></label>
-                  </div>
-                </th>
-                <th scope="col">
-                  <%= sort_link @search,:name, Spree.t(:name), { default_order: "desc" }, {title: 'admin_products_listing_name_title'} %>
-                </th>
-                <th scope="col" class="text-center">
-                  <%= Spree.t(:status) %>
-                  <%= help_bubble(Spree.t('admin.products.help_bubble')) %>
-                </th>
-                <th scope="col"><%= Spree.t(:inventory) %></th>
-                <% if defined?(current_vendor) %>
-                  <th scope="col" class="d-vendor"><%= Spree.t(:vendor) %></th>
-                <% end %>
-                <th scope="col"><%= Spree.t(:price) %></th>
+                <%= render 'spree/admin/products/table_columns' %>
               </tr>
             </thead>
             <tbody>
