Fix filtering customer orders

--- a/admin/app/views/spree/admin/orders/_filters.html.erb
+++ b/admin/app/views/spree/admin/orders/_filters.html.erb
@@ -1,4 +1,15 @@
-<%= search_form_for [:admin, @vendor || @user, @search], url: controller_name == 'checkouts' ? spree.admin_checkouts_url : nil, class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"}  do |f| %>
+<% frame_name ||= nil %>
+
+<%= search_form_for [:admin, @vendor || @user, @search],
+  url: controller_name == 'checkouts' ? spree.admin_checkouts_path : nil,
+  class: "filter-wrap border-bottom",
+  data: {
+    controller: "filters reveal",
+    reveal_hidden_class: "d-none",
+    filters_url_value: request.url
+  } do |f| %>
+  <%= hidden_field_tag :frame_name, frame_name if frame_name.present? %>
+
   <div class="d-flex flex-column flex-lg-row gap-2">
     <%= render 'spree/admin/shared/filters_search_bar', param: :multisearch %>
 
