--- a/admin/app/views/spree/admin/orders/index.html.erb
+++ b/admin/app/views/spree/admin/orders/index.html.erb
@@ -13,7 +13,7 @@
 <div class="card-lg p-0">
   <% if params[:frame_name].present? %>
     <%= turbo_frame_tag params[:frame_name], autoscroll: true, data: { autoscroll_block: :nearest, autoscroll_behavior: :smooth } do %>
-      <%= render 'spree/admin/orders/filters' %>
+      <%= render 'spree/admin/orders/filters', frame_name: params[:frame_name] %>
       <%= render 'spree/admin/orders/list' %>
     <% end %>
   <% else %>
