Storefront: open source wishlists (pt2)

--- a/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
+++ b/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="lg:col-span-8 lg:col-start-5">
     <div class="mb-12 lg:mb-24">
-      <div class="uppercase font-medium mb-4">
+      <div class="font-medium mb-4">
         <%= Spree.t(:addresses) %>
       </div>
       <% if @addresses.any? %>
