Admin: fixed translation collision

--- a/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
@@ -1,6 +1,6 @@
 <li class="nav-item">
   <% storefront_active = %w[themes posts pages storefront].include?(controller_name) %>
-  <%= active_link_to_with_icon('building-store', Spree.t(:storefront), spree.admin_themes_path, class: 'nav-link', active: storefront_active) %>
+  <%= active_link_to_with_icon('building-store', Spree.t('admin.storefront'), spree.admin_themes_path, class: 'nav-link', active: storefront_active) %>
 
   <% if storefront_active %>
     <ul class="ml-4 pl-1 mb-2 nav-submenu flex-column mt-1">
